# GalleryDownloaderServer

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-compose.yml.example  pyproject.toml
app/: __init__.py  config.py  db.py  main.py  notifications.py  queue.py  worker.py
app/api/: __init__.py  downloads.py  notifications.py  security.py  settings.py
app/frontend/: settings.html
app/models/: __init__.py  entities.py  schemas.py
app/repositories/: __init__.py  downloads.py  settings.py
app/services/: __init__.py  download_manager.py  runtime_config.py
app/storage/: __init__.py  filesystem.py
docs/: download-status-panel-design.md  frontend_tasks.md  project-design.md
frontend/: index.html  styles.css
tampermonkey/: gallery-downloader-provider.user.js  gallery-downloader-simpcity.user.js  gallery-downloader.user.js
